--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,8 @@ Description: This is a small package for cleaning, timelining,
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Depends: 
+    R(>= 2.10.0)
 Suggests:
     lubridate (>= 1.6.0),
     knitr (>= 1.15.1),
